Home page explanation changed

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
     <div class="col-8 m-5">
 
-        <h6 class="mb-4">翻訳と用語集の検索可能なデータベース</h6>
+        <h6 class="mb-4">翻訳と用語集の検索可能なWebアプリケーション</h6>
 
         <p class="text-muted">
             <small>
