--- a/templates/_home_table_list.html
+++ b/templates/_home_table_list.html
@@ -1,3 +1,3 @@
-{% for object in resources_table_list %}
+{% for object in resources_list %}
     {% include "_home_table_resource_detail.html" %}
 {% endfor %}
