Resource implemented in home views and templates

--- a/templates/_home_table_resource_detail.html
+++ b/templates/_home_table_resource_detail.html
@@ -1,39 +1,21 @@
 <tr>
 
-    {% if object.type == "glossary" %}
+    <td class="align-middle">
+        <a href="{% url 'resource_detail' object.pk %}">{{ object }}</a>
+    </td>
 
-        <td class="align-middle">
-            <a href="{% url 'glossary_detail' object.pk %}">{{ object }}</a>
-        </td>
-
-        <td class="align-middle">
+    <td class="align-middle">
+        {% if object.resource_type == "GLOSSARY" %}
             用語集
-        </td>
-
-    {% elif object.type == "translation" %}
-
-        <td class="align-middle">
-            <a href="{% url 'translation_detail' object.pk %}">{{ object }}</a>
-        </td>
-
-        <td class="align-middle">
+        {% elif object.resource_type == "TRANSLATION" %}
             翻訳
-        </td>
-
-    {% else %}
-
-        <td class="align-middle">
-            {{ object }}
-        </td>
-
-        <td class="align-middle">
+        {% else %}
             不明
-        </td>
+        {% endif %}
+    </td>
 
-    {% endif %}
-
-        <td class="align-middle">
-            {{ object.created_on|date:"d M Y" }}, {{ object.created_on|time:"H:i" }}
-        </td>
+    <td class="align-middle">
+        {{ object.created_on|date:"d M Y" }}, {{ object.created_on|time:"H:i" }}
+    </td>
 
 </tr>
