--- a/templates/resource_detail.html
+++ b/templates/resource_detail.html
@@ -27,7 +27,7 @@
                 <h5 class="d-inline pe-2">翻訳の詳細</h5>
                 <small>
                     <a href="{% url 'translation_update' object.pk %}">詳細を編集する</a> |
-                    <a href="{% url 'translation_delete' object.pk %}">用語集を削除する</a>
+                    <a href="{% url 'translation_delete' object.pk %}">翻訳を削除する</a>
                 </small>
 
             {% endif %}
