--- a/templates/glossary_update.html
+++ b/templates/glossary_update.html
@@ -23,7 +23,7 @@
                     {{ form|crispy }}
 
                     <div class="text-center">
-                        <a href="{% url 'glossary_detail' object.pk %}"  class="btn btn-secondary btn-sm me-2" role="button">キャンセル</a>
+                        <a href="{% url 'resource_detail' object.pk %}"  class="btn btn-secondary btn-sm me-2" role="button">キャンセル</a>
                         <button type="submit" class="btn btn-primary btn-sm">更新</button>
                     </div>
 
