--- a/templates/translation_upload.html
+++ b/templates/translation_upload.html
@@ -18,7 +18,7 @@
 
                     {% csrf_token %}
 
-                    {{ form.translation_file|as_crispy_field }}
+                    {{ form.upload_file|as_crispy_field }}
                     {{ form.title|as_crispy_field }}
                     {{ form.translator|as_crispy_field }}
                     {{ form.field|as_crispy_field }}
