Resource related updates

--- a/templates/_resource_content_table.html
+++ b/templates/_resource_content_table.html
@@ -60,7 +60,7 @@
 
                 <td class="col-center-align">
 
-                    {% include "_entry_action_icons.html" %}
+                    {% include "_item_action_icons.html" %}
 
                 </td>
 
