セグメント replaced with エントリー

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
             <small>
                 総計リソース数：{{ num_of_resources|intcomma }}（用語集数：{{ num_of_glossaries|intcomma }}、翻訳数：{{ num_of_translations|intcomma }}）
                 <br>
-                総計エントリー数：{{ num_of_all_entries|intcomma }}（用語集エントリー数：{{ num_of_gloss_entries|intcomma }}、翻訳セグメント数：{{ num_of_trans_segments|intcomma }}）
+                総計エントリー数：{{ num_of_all_entries|intcomma }}（用語集エントリー数：{{ num_of_gloss_entries|intcomma }}、翻訳エントリー数：{{ num_of_trans_segments|intcomma }}）
             </small>
         </p>
         <br>
