--- a/templates/segment_delete.html
+++ b/templates/segment_delete.html
@@ -8,7 +8,7 @@
 
             <div class="card-header">
                 <div class="text-center">
-                    翻訳セグメントを削除する
+                    翻訳エントリーを削除する
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
 
                 <hr class="mt-1">
 
-                <p class="text-center pt-2">上記の翻訳セグメントを削除してよろしいですか。</p>
+                <p class="text-center pt-2">上記の翻訳エントリーを削除してよろしいですか。</p>
 
                 <form method="POST" novalidate>
                     {% csrf_token %}
