--- a/templates/segment_update.html
+++ b/templates/segment_update.html
@@ -10,7 +10,7 @@
 
             <div class="card-header">
                 <div class="text-center">
-                    翻訳セグメントを編集する
+                    翻訳エントリーを編集する
                 </div>
             </div>
 
