--- a/templates/item_delete.html
+++ b/templates/item_delete.html
@@ -9,7 +9,7 @@
             <div class="card-header">
                 <div class="text-center">
                     {% if item.resource.resource_type == "TRANSLATION" %}
-                        翻訳セグメントを削除する
+                        翻訳エントリーを削除する
                     {% else %}
                         用語集エントリーを削除する
                     {% endif %}
@@ -70,7 +70,7 @@
 
                 <p class="text-center pt-2">
                     {% if item.resource.resource_type == "TRANSLATION" %}
-                        上記の翻訳セグメントを削除してよろしいですか。
+                        上記の翻訳エントリーを削除してよろしいですか。
                     {% else %}
                         上記の用語集エントリーを削除してよろしいですか。
                     {% endif %}
